stateDiagram-v2
  [*] --> OFFLINE
  OFFLINE --> AVAILABLE
  AVAILABLE --> RESERVED
  AVAILABLE --> PAUSED
  AVAILABLE --> OFFLINE
  RESERVED --> DIALING
  RESERVED --> AVAILABLE
  RESERVED --> OFFLINE
  DIALING --> CONNECTED
  DIALING --> AVAILABLE
  DIALING --> OFFLINE
  CONNECTED --> WRAP_UP
  WRAP_UP --> AVAILABLE